samples/_failures_safe/1761129150_420fb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_806eb0af.c: In function ‘main’:
./samples/SAFE/__tmp_806eb0af.c:152:5: error: expected declaration or statement at end of input
  152 |     print_matrix(&a, "A");
      |     ^~~~~~~~~~~~
